syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Pricer.Web.Shared.Grpc";

package Item;

service ItemDeletion {
  rpc Delete(ItemDeletionRequest) returns (google.protobuf.Empty);
}

message ItemDeletionRequest {
  int32 itemId = 1;
}